--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@
         <p>audio director of various high school music events</p>
         <p>tech representative of the student council</p>
         <p>i also play guitar</p>
+            
+        <p>bgm: work in progress by annalise azadian</p>
     </main>
 
     <footer>
