--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
             <div class="onion"><a href="https://captainkesty.github.io">captainkesty.github.io</a> | <a href="https://github.com/captainkesty">github.com/captainkesty</a></div>
         </header>
 
-    <player><audio id="bg" class="player" src='audio/workinprogress.mp3' autoplay controls><script>document.currentScript.parentElement.volume = 0.3;</script></audio></player>
-
     <main>
         <h1>amateur coder</h1>
 
@@ -74,6 +72,8 @@
         <p>audio director of various high school music events</p>
         <p>tech representative of the student council</p>
         <p>i also play guitar</p>
+        
+        <p>bgm: work in progress by annalise azadian</p>
     </main>
 
     <footer>
