update for new username

--- a/index.html
+++ b/index.html
@@ -205,7 +205,8 @@
     </head>
     <body onLoad="startTro();">
 <div id="main"></div>
-<div id="text" style="margin-left: 0px; margin-top: 0px;"><div style="vertical-align:top; display:inline-block; opacity:1.0999999999999999"><header><div><a class="onion">student at wlu</a></div><div class="onion"><a href="https://captainkesty.github.io">captainkesty.github.io</a> | <a href="https://github.com/captainkesty">github.com/captainkesty</a></div></header><main><h2>amateur coder</h2>check out my <a href="https://github.com/captainkesty">projects on github</a>
+<div id="text" style="margin-left: 0px; margin-top: 0px;"><div style="vertical-align:top; display:inline-block; opacity:1.0999999999999999">                          hydr4x
+<header><div><a class="onion">student at wlu</a></div><div class="onion"><a href="https://captainkesty.github.io">captainkesty.github.io</a> | <a href="https://github.com/captainkesty">github.com/captainkesty</a></div></header><main><h2>amateur coder</h2>check out my <a href="https://github.com/captainkesty">projects on github</a>
 
 <h2>about me</h2>i'm primarily a backend dev, but i do frontend too. that's really it. i program stuff.
 
@@ -221,12 +222,12 @@ this project ended up being incomplete, but the real magic comes from the amount
 assets used in the program are not original and are taken from other properties, we only own the code we wrote.
 
 
-<a href='https://github.com/captainkesty/AshleyTest'>AshleyTest</a> | JAVA
+<a href='https://github.com/hydr4x/AshleyTest'>AshleyTest</a> | JAVA
 
 derived off the above project, i integrated another third party library that would assist with grouping of entities within our game. it's like a part II to 893 LibGDX project.
 
 
-<a href='https://github.com/captainkesty/FreeToPlay'>FreeToPlay</a> | JAVASCRIPT/HTML
+<a href='https://github.com/hydr4x/FreeToPlay'>FreeToPlay</a> | JAVASCRIPT/HTML
 
 i created an html page that would pull the "Free to Play" champions for the popular game <a href="http://play.na.leagueoflegends.com/en_US">League of Legends</a>.
 
@@ -239,14 +240,14 @@ i was asked to write/debug some python scripts for my friend for her film. most 
 thanks, elaina
 
 
-<a href='https://github.com/captainkesty/RPGbot'>RPGbot</a> | JAVASCRIPT
+<a href='https://github.com/hydr4x/RPGbot'>RPGbot</a> | JAVASCRIPT
 
 i made a bot for use in the voip program Discord. this bot would be able to take commands from the chat program and simulate an RPG game within the client.
 
 again, another project that was mostly learning how to deal with an api.
 
 
-<a href="https://github.com/captainkesty/barks">barksbot</a> | JAVASCRIPT
+<a href="https://github.com/hydr4x/barks">barksbot</a> | JAVASCRIPT
 
 originally used to play the sound effect of a dog barking (yes seriously), it ended up being a general music player. plays a song based on the command entered.
 
@@ -292,9 +293,9 @@ i also play guitar
 <noscript>
                           hydrax
                       student at wlu
-      <a href="https://captainkesty.github.io">captainkesty.github.io</a> | <a href="https://github.com/captainkesty">github.com/captainkesty</a>
+      <a href="https://hydr4x.github.io">hydr4x.github.io</a> | <a href="https://github.com/hydr4x">github.com/hydr4x</a>
 <h2>amateur coder</h2>
-check out my <a href="https://github.com/captainkesty">projects on github</a>
+check out my <a href="https://github.com/hydr4x">projects on github</a>
 
 <h2>about me</h2>
 i'm primarily a backend dev, but i do frontend too. that's really it. i program stuff.
@@ -313,12 +314,12 @@ this project ended up being incomplete, but the real magic comes from the amount
 assets used in the program are not original and are taken from other properties, we only own the code we wrote.
 
 
-<a href='https://github.com/captainkesty/AshleyTest'>AshleyTest</a> | JAVA
+<a href='https://github.com/hydr4x/AshleyTest'>AshleyTest</a> | JAVA
 
 derived off the above project, i integrated another third party library that would assist with grouping of entities within our game. it's like a part II to 893 LibGDX project.
 
 
-<a href='https://github.com/captainkesty/FreeToPlay'>FreeToPlay</a> | JAVASCRIPT/HTML
+<a href='https://github.com/hydr4x/FreeToPlay'>FreeToPlay</a> | JAVASCRIPT/HTML
 
 i created an html page that would pull the "Free to Play" champions for the popular game <a href="http://play.na.leagueoflegends.com/en_US">League of Legends</a>.
 
@@ -331,14 +332,14 @@ i was asked to write/debug some python scripts for my friend for her film. most 
 thanks, elaina
 
 
-<a href='https://github.com/captainkesty/RPGbot'>RPGbot</a> | JAVASCRIPT
+<a href='https://github.com/hydr4x/RPGbot'>RPGbot</a> | JAVASCRIPT
 
 i made a bot for use in the voip program Discord. this bot would be able to take commands from the chat program and simulate an RPG game within the client.
 
 again, another project that was mostly learning how to deal with an api.
 
 
-<a href="https://github.com/captainkesty/barks">barksbot</a> | JAVASCRIPT
+<a href="https://github.com/hydr4x/barks">barksbot</a> | JAVASCRIPT
 
 originally used to play the sound effect of a dog barking (yes seriously), it ended up being a general music player. plays a song based on the command entered.
 
