--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <script src="index/codef_core.js"></script> 
         <script src="index/codef_starfield.js"></script>
         <script src="index/codef_3d.js"></script>
+        <script src="index/controls.js"></script>
         <script>
             var mycanvas;
             var mystarfield;
@@ -206,11 +207,19 @@
     <body onLoad="startTro();">
 <div id="main"></div>
 <div id="text" style="margin-left: 0px; margin-top: 0px;"><div style="vertical-align:top; display:inline-block; opacity:1.0999999999999999">                          hydr4x
-<header><div><a class="onion">student at wlu</a></div><div class="onion"><a href="https://captainkesty.github.io">captainkesty.github.io</a> | <a href="https://github.com/captainkesty">github.com/captainkesty</a></div></header><main><h2>amateur coder</h2>check out my <a href="https://github.com/captainkesty">projects on github</a>
+<header><div><a class="onion">student at wlu</a></div><div class="onion"><a href="https://github.com/hydr4x">github.com/hydr4x</a></div></header><main>
+<a onclick="song()">play/pause song</a><h2>amateur coder</h2>check out my <a href="https://github.com/hydr4x">projects on github</a>
 
-<h2>about me</h2>i'm primarily a backend dev, but i do frontend too. that's really it. i program stuff.
+<h2>about me</h2>hi.
 
-<h2>languages</h2>c|html|lua|python|ruby|java|javascript|xml
+i'm a first year wlu cs student, and i go by hydrax or hydr4x. i've been programming since 2008, starting off as a lua script kiddie (i'm embarassed about this lol) and beginning my actual programming career with java.
+
+backends are my thing, but i like doing frontend sometimes. it's real cool :]
+
+<h2>languages</h2>c|html|lua|python|ruby|java|javascript|xml|nodejs
+(yes i know how to use jquery)
+
+<h2>what os i use</h2>i dualboot windows and ubuntu. i don't use osx ever
 
 <h2>notable projects</h2>
 <a href="https://github.com/notsign/893FinalProject">893 LibGDX project</a> | JAVA
@@ -277,7 +286,9 @@ technical director of music production "Into the Woods" in high school
 
 head of the tech crew in high school
 audio director of high school music events
-i also play guitar
+i play guitar
+
+if you can find a way to remove this textbox, there's a nice little easteregg in the background :]
 </main>
 </div></div>
 
@@ -288,20 +299,26 @@ i also play guitar
             updated by
             <a href="https://twitter.com/hydr4xx">hydrax</a>
 
-            1/13/2017<span class="cursor"></span>
+            1/13/2017
+            | yuki_satellites/radix<span class="cursor"></span>
         </footer>
 <noscript>
                           hydrax
                       student at wlu
-      <a href="https://hydr4x.github.io">hydr4x.github.io</a> | <a href="https://github.com/hydr4x">github.com/hydr4x</a>
+      <a href="https://github.com/hydr4x">github.com/hydr4x</a>
 <h2>amateur coder</h2>
 check out my <a href="https://github.com/hydr4x">projects on github</a>
 
-<h2>about me</h2>
-i'm primarily a backend dev, but i do frontend too. that's really it. i program stuff.
+<h2>about me</h2>hi.
 
-<h2>languages</h2>
-c|html|lua|python|ruby|java|javascript|xml
+i'm a first year wlu cs student, and i go by hydrax or hydr4x. i've been programming since 2008, starting off as a lua script kiddie (i'm embarassed about this lol) and beginning my actual programming career with java.
+
+backends are my thing, but i like doing frontend sometimes. it's real cool :]
+
+<h2>languages</h2>c|html|lua|python|ruby|java|javascript|xml|nodejs
+(yes i know how to use jquery)
+
+<h2>what os i use</h2>i dualboot windows and ubuntu. i don't use osx ever
 
 <h2>notable projects</h2>
 
@@ -363,7 +380,9 @@ technical director of music production "Into the Woods" in high school
 head of the tech crew in high school
 audio director of various high school music events
 tech representative of the student council
-i also play guitar
+i play guitar
+
+if you can find a way to remove this textbox, there's a nice little easteregg in the background :]
 </noscript>
     </body>
 </html>
