--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html><head>
         <meta http-equiv="content-type" content="text/html; charset=UTF-8"><meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>deft's website</title>
+        <title>hydrax</title>
         <meta name="description" content="deft's website">
         <link href="index/main.css" rel="stylesheet">
         <link rel="stylesheet" href="index/hack.css">
